# cinenomad

./: .gitignore  .pylintrc  README.md  main.py  pyproject.toml  requirements.txt  test.py
components/: __init__.py  add_movie_source_button.py  add_movie_source_modal.py  app.py  app_control_button.py  connector.py
components/strategy/: __init__.py  connector_click_strategy.py  local_connector_click.py  netflix_click_strategy.py  netflix_connector_click.py  youtube_connector_click.py
components/vlc_player/: player.py
config/: accepted_extension.yaml  api_keys.yaml  app_settings.yaml  chrome_process_config.yaml  components_config.yaml  logging_config.yaml  required_folders.yaml  tmdb_settings.yaml
connectors/: connector_obj.json
settings/: accepted_extension.yaml  chrome_process_config.yaml  components_config.yaml  vlc_player_config.yaml
src/app/: main.py
src/services/database/: connection.py  models.py  queries.py  schema.py
src/services/logging/: setup.py  sqlite_handler.py
src/services/metadata/: tmdb_api.py  video_metadata_reader.py
src/ui/: app.py
src/ui/common/: centerable_toplevel.py  confirmation_modal.py
src/ui/home/: add_movie_source_button.py  add_movie_source_modal.py  connector.py  settings_modal.py
src/ui/local_browser/: __init__.py  local_connector_click.py  local_movie_browser_modal.py  local_movie_card.py  movie_selection_model.py  poster.py  poster_carousel.py
src/ui/vlc_player/: player.py  player_menu.py  player_sub_menu.py
src/ui/web_browser/: __init__.py  web_connector_click.py
src/utils/: __init__.py  chrome.py  events.py  file_handling.py
src/utils/exceptions/: custom_exceptions.py
utils/: __init__.py  chrome.py  file_handling.py  process_utils.py  tmbd_utils.py  tmdb_utils.py  torrent_name_parser.py  video_metadata_reader.py  vlc.py
utils/database/: __init__.py  connection.py  models.py  queries.py  schema.py
utils/exceptions/: __init__.py  custom_exceptions.py
