[project]
name = "cinenomad"
version = "0.0.2.a0"
description = "Cross-Platform Media player app made with Tkinter."
readme = "README.md"
requires-python = "==3.10.12"
dependencies = [
    # Cross-platform packages
    "async-timeout==4.0.1",
    "attrs==21.2.0",
    "automat==20.2.0",
    "bcrypt==3.2.0",
    "beautifulsoup4==4.10.0",
    "blinker==1.4",
    "brotli==1.0.9",
    "certifi==2020.6.20",
    "chardet==4.0.0",
    "click==8.0.3",
    "colorama==0.4.4",
    "constantly==15.1.0",
    "cryptography==3.4.8",
    "customtkinter>=5.2.2",
    "et-xmlfile==2.0.0",
    "filelock==3.6.0",
    "httplib2==0.20.2",
    "hyperlink==21.0.0",
    "idna==3.3",
    "ifaddr==0.1.7",
    "imdbpy==2021.4.18",
    "importlib-metadata==4.6.4",
    "incremental==21.3.0",
    "jeepney==0.7.1",
    "keyring==23.5.0",
    "langcodes>=3.5.0",
    "lazr-restfulclient==0.14.4",
    "lazr-uri==1.0.6",
    "mako==1.1.3",
    "markupsafe==2.0.1",
    "more-itertools==8.10.0",
    "mutagen==1.45.1",
    "netaddr==0.8.0",
    "netifaces==0.11.0",
    "numpy==2.1.0",
    "oauthlib==3.2.0",
    "opencv-python>=4.12.0.88",
    "openpyxl==3.1.5",
    "packaging==21.3",
    "pandas==2.2.2",
    "pexpect==4.8.0",
    "pillow==9.0.1",
    "protobuf==3.12.4",
    "psutil==5.9.0",
    "ptyprocess==0.7.0",
    "pyasn1==0.4.8",
    "pyasn1-modules==0.2.1",
    "pyopenssl==21.0.0",
    "pyparsing==2.4.7",
    "python-dateutil==2.9.0.post0",
    "python-gnupg==0.4.8",
    "python-magic==0.4.24",
    "python-vlc>=3.0.21203",
    "pyyaml>=6.0.2",
    "pyhamcrest==2.0.2",
    "pyjwt==2.3.0",
    "pymacaroons==0.13.0",
    "pymediainfo>=7.0.1",
    "rencode==1.0.6",
    "reportlab==3.6.8",
    "requests==2.32.5",
    "requests-file==1.5.1",
    "secretstorage==3.3.1",
    "service-identity==18.1.0",
    "setproctitle==1.2.2",
    "six==1.16.0",
    "soupsieve==2.3.1",
    "tinycss2==1.1.1",
    "tk-alert>=0.0.2",
    "tldextract==3.1.2",
    "tqdm==4.66.6",
    "twisted==22.1.0",
    "typing-extensions==3.10.0.2",
    "tzdata==2024.1",
    "unidecode==1.3.3",
    "urllib3==1.26.5",
    "wadllib==1.3.6",
    "webencodings==0.5.1",
    "websockets==9.1",
    "xlrd==1.2.0",
    "yt-dlp==2022.4.8",
    "zipp==1.0.0",
    "zope-interface==5.4.0",
    "torrent-name-parser>=0.1.0",
    "language-data>=1.4.0",

    # Linux-only packages
    "pyinotify==0.9.6; sys_platform == 'linux'",
    "python-xlib==0.29; sys_platform == 'linux'",
    "pyusb==1.3.1; sys_platform == 'linux'",
    "pyxdg==0.27; sys_platform == 'linux'"
]

# Optional metadata for dependencies, used by uv to manage and resolve dependencies.
[[tool.uv.dependency-metadata]]
name = "pyinotify"
version = "0.9.6"

[[tool.uv.dependency-metadata]]
name = "python-xlib"
version = "0.29"

[[tool.uv.dependency-metadata]]
name = "pyusb"
version = "1.3.1"

[[tool.uv.dependency-metadata]]
name = "pyxdg"
version = "0.27"
